--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     let me capture
                     
-                    it for you</p>
+                    it for</p>
             </div>
             <div id="bot">
                 <h5>Ready to capture your story?
